--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -23,11 +23,11 @@
   --lime-700: #3a9104;
   --lime-900: #206b00;
 
-  --blueberry-100: #8cd5ff;
-  --blueberry-300: #64baff;
-  --blueberry-500: #3689e6;
-  --blueberry-700: #0d52bf;
-  --blueberry-900: #002e99;
+  --blueberry-100: #006fff;
+  --blueberry-300: #006fff;
+  --blueberry-500: #006fff;
+  --blueberry-700: #006fff;
+  --blueberry-900: #006fff;
 
   --grape-100: #e4c6fa;
   --grape-300: #cd9ef7;
