--- a/_includes/thanks.html
+++ b/_includes/thanks.html
@@ -13,15 +13,7 @@
       target="_blank"
       title="YouTube"
     >
-      {% include svg/patreon.svg %}
-    </a>
-    <a
-      href="https://www.paypal.me/thelinuxexp"
-      rel="noreferrer nofollow noopener"
-      target="_blank"
-      title="Patreon"
-    >
-      {% include svg/paypal.svg %}
+      {% include svg/youtube.svg %}
     </a>
   </div>
   <hr />
