--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <p>© {{ site.time | date: '%Y' }} The Linux Experiment</p>
+  <p>© {{ site.time | date: '%Y' }} Atius</p>
   <ul>
     <li><a rel="me" href="https://mastodon.world/@Atius">Mastodon</a></li>
   </ul>
