--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,18 +11,13 @@
 
   <link rel="icon" sizes="256x256" href="https://www.gravatar.com/avatar/{{ site.gravatar }}?s=256&d=blank" />
   <meta itemprop="logo" content="https://www.gravatar.com/avatar/{{ site.gravatar }}?s=256&d=blank" />
-  <link rel="shortcut icon" href="https://elementary.io/favicon.ico">
-  <link rel="apple-touch-icon" href="https://elementary.io/images/launcher-icons/apple-touch-icon.png">
-
-  {% if page.hidden %}
-    <meta name="robots" content="noindex,nofollow" />
-  {% endif %}
+  <link rel="shortcut icon" href="/images/favicon.ico">
+  <link rel="apple-touch-icon" href="/images/favicon.ico">
 
   <link rel="alternate" type="application/rss+xml" title="elementary Blog" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <meta name="author" content="{% if page.author.name %}{{ page.author.name }}{% else %}{{ site.author }}{% endif %}" />
   <meta name="theme-color" content="{% if page.theme-color %}{{ page.theme-color }}{% else %}{{ site.theme-color }}{% endif %}" />
-  <meta name="color-scheme" content="light dark" />
 
   {% if page.image %}
     {% assign prefix = page.image | slice: 0, 4 %}
@@ -46,10 +41,7 @@
   <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
 
   <link rel="stylesheet" type="text/css" media="all" href="{{ '/css/main.css' | prepend: site.baseurl | append: '?v=' | append: site.time }}" />
-  {% if jekyll.environment == "production" and site.url == "https://blog.elementary.io" %}
-    <script async defer data-domain="blog.elementary.io" src="https://stats.elementary.io/js/index.js"></script>
-    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
-  {% else %}
-    <script>window.plausible = function() { console.log("Plausible not enabled in development"); }</script>
-  {% endif %}
+  
+  <script defer data-domain="thelinuxexp.com" src="https://plausible.io/js/plausible.js"></script>
+
 </head>
