--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,6 +42,6 @@
 
   <link rel="stylesheet" type="text/css" media="all" href="{{ '/css/main.css' | prepend: site.baseurl | append: '?v=' | append: site.time }}" />
   
-  <script defer data-domain="thelinuxexp.com" src="https://plausible.io/js/plausible.js"></script>
+  <script defer data-domain="atiusamy.github.io" src="https://plausible.io/js/plausible.js"></script>
 
 </head>
