--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,11 @@
 <header>
   <nav class="primary">
     <ul>
-      <li><a href="https://elementary.io" class="logomark" target="_self">
+      <li><a href="https://atiusamy.github.io/" class="logomark" target="_self">
         {% include svg/logomark.svg %}
       </a></li>
 
-      <li><a href="https://elementary.io/support" target="_self">Support</a></li>
-      <li><a href="https://developer.elementary.io" target="_self">Developer</a><</li>
-      <li><a href="https://elementary.io/get-involved" target="_self">Get Involved</a></li>
-      <li><a href="https://store.elementary.io" target="_self">Store</a></li>
-      <li><a href="{{ site.baseurl }}/">Blog</a></li>
+      <li><a href="https://www.youtube.com/@Atius/videos" target="_self">Minecraft Videos</a></li>
     </ul>
 
     <ul>
