--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,38 +13,17 @@
         {% include svg/rss-square.svg %}
       </a></li>
 
-      <li><a href="https://youtube.com/user/elementaryproject" target="_blank" rel="noopener" title="Youtube">
-        {% include svg/youtube.svg %}
-      </a></li>
-
-      <li><a href="https://www.facebook.com/elementaryos" target="_blank" rel="noopener" title="Facebook">
-        {% include svg/facebook.svg %}
-      </a></li>
-
-      <li><a href="https://mastodon.social/@elementary" target="_blank" rel="noopener" title="Mastodon">
+      <li><a href="https://mastodon.world/@Atius" target="_blank" rel="noopener" title="Mastodon">
         {% include svg/mastodon.svg %}
       </a></li>
 
-      <li><a href="https://www.reddit.com/r/elementaryos" target="_blank" rel="noopener" title="Reddit">
-        {% include svg/reddit.svg %}
-      </a></li>
-
-      <li><a href="https://twitter.com/elementary" target="_blank" rel="noopener" title="Twitter">
+      <li><a href="https://twitter.com/atiusamy" target="_blank" rel="noopener" title="Twitter">
         {% include svg/twitter.svg %}
-      </a></li>
-
-      <li><a href="https://join.slack.com/t/elementarycommunity/shared_invite/enQtMzU1NDU4OTE1MjY2LWUyOTBkZGNkZGM4MDgzZjE2ZjRiZDgwMDQ1ZTA0MzcxYjI0MDUyNGRlNDI5ZWViNDkwMzMwYzczMDY2ZjA0MTc" target="_blank" rel="noopener" title="Slack">
-        {% include svg/slack.svg %}
       </a></li>
     </ul>
   </nav>
   <nav class="secondary">
     <div>
-      <a href="{{ site.baseurl }}/tags/#updates">OS Updates</a>
-      <a href="{{ site.baseurl }}/tags/#appcenter">AppCenter</a>
-      <a href="{{ site.baseurl }}/tags/#devs">Developers</a>
-      <a href="{{ site.baseurl }}/tags/#design">Design</a>
-    </div>
 
     <div id="search-container" class="hidden">
       {% include svg/edit-find-symbolic.svg %}
