--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <nav class="primary">
     <ul>
       <li><a href="https://atiusamy.github.io/" class="logomark" target="_self">
-        {% include svg/logomark.svg %}
+        {% include svg/atius.svg %}
       </a></li>
 
       <li><a href="https://www.youtube.com/@Atius/videos" target="_self">Minecraft Videos</a></li>
