--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,6 +16,14 @@
       <li><a href="https://mastodon.world/@Atius" target="_blank" rel="noopener" title="Mastodon">
         {% include svg/mastodon.svg %}
       </a></li>
+      
+      <li><a href="https://legacy.curseforge.com/members/atiusamy/projects" target="_blank" rel="noopener" title="Mastodon">
+        {% include svg/curseforge.svg %}
+      </a></li>
+            
+      <li><a href="https://modrinth.com/user/AtiusAmy" target="_blank" rel="noopener" title="Mastodon">
+        {% include svg/modrinth.svg %}
+      </a></li>
 
       <li><a href="https://twitter.com/atiusamy" target="_blank" rel="noopener" title="Twitter">
         {% include svg/twitter.svg %}
