--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
       </a></li>
       
       <li><a href="https://legacy.curseforge.com/members/atiusamy/projects" target="_blank" rel="noopener" title="Mastodon">
-        {% include svg/curseforge.svg %}
+        {% include svg/appcenter.svg %}
       </a></li>
             
       <li><a href="https://modrinth.com/user/AtiusAmy" target="_blank" rel="noopener" title="Mastodon">
