--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,11 +17,11 @@
         {% include svg/mastodon.svg %}
       </a></li>
       
-      <li><a href="https://legacy.curseforge.com/members/atiusamy/projects" target="_blank" rel="noopener" title="Mastodon">
-        {% include svg/appcenter.svg %}
+      <li><a href="https://legacy.curseforge.com/members/atiusamy/projects" target="_blank" rel="noopener" title="Curseforge">
+        {% include svg/curseforge.svg %}
       </a></li>
             
-      <li><a href="https://modrinth.com/user/AtiusAmy" target="_blank" rel="noopener" title="Mastodon">
+      <li><a href="https://modrinth.com/user/AtiusAmy" target="_blank" rel="noopener" title="Modrinth">
         {% include svg/modrinth.svg %}
       </a></li>
 
