--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <body class="{% if page.url == '/' %}home {% endif %}">
     {% include nav.html %}
     <section>
-      {{ content | replace: '<a rel="me" href="https://mastodon.world/@AmyIsCoolz">Mastodon</a> target="_blank" href="http' }}
+      {{ content | replace: '<a rel="me" href="https://sauropods.win/@AmyIsCoolz">Mastodon</a> target="_blank" href="http' }}
 
       {% include medium.html %}
     </section>
