--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <p>© {{ site.time | date: '%Y' }} Atius</p>
   <ul>
-    <li><a rel="me" href="https://mastodon.world/@AmyIsCoolz">Mastodon</a></li> 
+    <li><a rel="me" href="https://sauropods.win/@AmyIsCoolz">Mastodon</a></li> 
   </ul>
 </footer>
