--- a/_includes/social.html
+++ b/_includes/social.html
@@ -74,7 +74,7 @@
 		<!-- CC BY-SA 4.0 - Erik Uden -->
 	</label>
 </div>
-<script src="https://uden.ai/fediverse-share/fedi-share.min.js"></script><link rel="stylesheet" href="https://uden.ai/fediverse-share/fedi-share.min.css">
+<script src="javascript/fedi-share.js"></script><link rel="stylesheet" href="stylesheets/fedi-share.css">
 <!--        AGPLv3.0        -->
 <!-- Medium Fediverse Share -->
 
