--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
         {% include svg/rss-square.svg %}
       </a></li>
 
-      <li><a href="https://mastodon.world/@Atius" target="_blank" rel="noopener" title="Mastodon">
+      <li><a href="https://firefish.social/@atius" target="_blank" rel="noopener" title="Mastodon">
         {% include svg/mastodon.svg %}
       </a></li>
       
