--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,6 @@
   <p>© {{ site.time | date: '%Y' }} Atius</p>
   <ul>
     <li><a rel="me" href="https://sauropods.win/@AmyIsCoolz">Mastodon</a></li> 
+	<li><a rel="me" href="https://firefish.social/@atius">Mastodon</a></li> 
   </ul>
 </footer>
