--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,5 +1,15 @@
 body > header {
-  background-color: var(--header-bg-color);
+  background: transparent;
+  backdrop-filter: blur(10px);
+  position: fixed;
+  top: 3px;
+  left: 3px;
+  right: 3px;
+  border-radius: 8px;
+  overflow: hidden;
+  border: 1px solid black;
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.02), inset 0 1px 0 0 rgba(255, 255, 255, 0.1), inset 0 -1px 0 0 rgba(255, 255, 255, 0.05), 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
   color: var(--header-fg-color);
   fill: var(--header-fg-color);
 
@@ -56,8 +66,12 @@ body > header {
     }
   }
 
+  .primary {
+    background-color: #006fffcc;
+  }
+
   .secondary {
-    background-color: var(--secondary-bg-color);
+    background-color: #333333cc;
     flex-wrap: wrap;
     padding: 0.25rem 1rem;
 
@@ -79,7 +93,7 @@ body > header {
     }
 
     #search-input {
-      background-color: var(--bg-color);
+      background-color: #1a1a1acc;
       border: 1px solid rgba(black, 0.15);
       border-radius: 0.3em;
       box-shadow: inset 0 1px 1px rgba(black, 0.05);
