--- a/css/main.scss
+++ b/css/main.scss
@@ -110,10 +110,10 @@ nav.pagination {
 
 .button {
   border: 1px solid var(--accent-color);
-  border-radius: 0.5em;
+  border-radius: 1.0em;
   font-family: var(--ui-font);
   line-height: 3em;
-  margin: 1.0em;
+  margin: 0.5em;
   padding: 0.5em 1em;
   text-decoration: none;
   white-space: nowrap;
@@ -130,7 +130,13 @@ nav.pagination {
     border: none;
   }
 }
+.tag {
 
+background-color: var (—-anana-300) ;
+border-radius:e. 25en;
+
+color:var (——banana-900) ;
+display:inline-block;
 pre {
   -webkit-text-size-adjust: none;
 }
