--- a/css/main.scss
+++ b/css/main.scss
@@ -130,6 +130,10 @@ nav.pagination {
     border: none;
   }
 }
+aside. tags {
+margin:ien auto;
+max-width: var (--content-width)
+}
 .tag {
 
 background-color: var (—-anana-300) ;
@@ -137,6 +141,7 @@ border-radius:e. 25en;
 
 color:var (——banana-900) ;
 display:inline-block;
+}
 pre {
   -webkit-text-size-adjust: none;
 }
