--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -29,6 +29,12 @@
   --blueberry-700: #006fff;
   --blueberry-900: #006fff;
 
+  --blue-100: #99c1f1;
+  --blue-300: #62a0ea;
+  --blue-500: #3584e4;
+  --blue-700: #1c71d8;
+  --blue-900: #1a5fb4;
+  
   --grape-100: #e4c6fa;
   --grape-300: #cd9ef7;
   --grape-500: #a56de2;
