--- a/_sass/_tags.scss
+++ b/_sass/_tags.scss
@@ -4,9 +4,9 @@ aside.tags {
 }
 
 .tag {
-  background-color: var(--banana-300);
+  background-color: var(--blue-300);
   border-radius: 1.0em;
-  color: var(--banana-900);
+  color: var(--blue-900);
   display: inline-block;
   font-family: var(--ui-font);
   font-size: 0.75em;
