--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,6 +1,6 @@
 :root {
   --ui-font: Inter, "Open Sans", "Noto Sans", "Roboto", "Droid Sans", sans-serif;
-  --copy-font: "Noto Serif", "Droid Serif", "New York", "Times New Roman", "Times", serif;
+  --copy-font: Inter, "Open Sans", "Noto Sans", "Roboto", "Droid Sans", sans-serif;
   --heading-font: Inter, Raleway, var(--ui-font);
 }
 
