--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,7 +1,7 @@
 @font-face {
 font-family: 'Gabarito';
-src: url('https://github.com/AtiusAmy/atiusamy.github.io/tree/master/fonts/Gabarito/static/Gabarito-Regular.ttf') format('truetype'),
-url('https://github.com/AtiusAmy/atiusamy.github.io/tree/master/fonts/Gabarito/static/Gabarito-Regular.woff') format('woff');
+src: url('/fonts/Gabarito/static/Gabarito-Regular.ttf') format('truetype'),
+url('/fonts/Gabarito/static/Gabarito-Regular.woff') format('woff');
 font-weight: normal;
 font-style: normal;
 }
