--- a/_includes/social.html
+++ b/_includes/social.html
@@ -65,7 +65,7 @@
 	<input type="checkbox" class="fedi-check-toggle">
 	<div class="fedi-instance">
 		<span>Instance: </span>
-		<input type="textbox" name="fedi-instance-input" placeholder="social.uden.ai">
+		<input type="textbox" name="fedi-instance-input" placeholder="mastodon.social">
 		<button class="fedi-share-button">Share</button>
 	</div>
 	<label class="fedi-top fedi-check-label">
