--- a/_includes/medium.html
+++ b/_includes/medium.html
@@ -2,5 +2,5 @@
   <hr />
   <article>
     <h2>Looking for More?</h2>
-    <p>Wait
+    <p>Please wait! This is kind of a personal blog with occasional informative stuff in it :P
 </div>
