--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,5 +1,6 @@
 body > header {
   background: transparent;
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   position: fixed;
   top: 3px;
