--- a/css/main.scss
+++ b/css/main.scss
@@ -109,7 +109,7 @@ nav.pagination {
 }
 
 .button {
-  border: 1px solid var(--accent-color);
+  border: none
   border-radius: 10.0em;
   font-family: var(--ui-font);
   line-height: 3em;
