--- a/_sass/_featured.scss
+++ b/_sass/_featured.scss
@@ -64,7 +64,7 @@
     background-origin: border-box;
     background-position: 50%;
     background-size: cover;
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: none;
     border-radius: 0.25rem;
     box-shadow:
       inset 0 0 0 1px rgba(255, 255, 255, 0.05),
