--- a/_sass/_featured.scss
+++ b/_sass/_featured.scss
@@ -91,7 +91,7 @@
 
     @media (prefers-color-scheme: dark) {
       background-color: var(--silver-900);
-      border: 0.1px solid black;
+      border: none;
       box-shadow:
         inset 0 0 0 1px rgba(255, 255, 255, 0.02),
         inset 0 1px 0 0 rgba(255, 255, 255, 0.1),
