--- a/_includes/medium.html
+++ b/_includes/medium.html
@@ -1,5 +1,7 @@
 <div class="medium">
   <hr />
+    <h2>Testing</h2>
+    <p>Ignore this :P
   <article>
     <h2>Looking for More?</h2>
     <p>Please wait! This is kind of a personal blog with occasional informative stuff in it :P
