--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -1,6 +1,12 @@
 <div class="medium">
-    <article>
-      <h2>Looking for More?</h2>
-      <p>Please wait! This is kind of a personal blog with occasional informative stuff in it :P
-    </article>
+    <div class="heading-grid">
+        <div class="profile">
+            <img src="{{ site.baseurl }}/images/icons/profile.webp" alt="Me!" style="max-width: 150px;">
+        </div>
+        <div class="details">
+            <h2>Hi! I'm Amy / Atius</h2>
+            <p>I'm a trans girl :3 (technically also a Minecraft YouTuber)</p>
+            <p>You've found my website!</p>
+        </div>
+    </div>
 </div>  
