--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -121,6 +121,12 @@ hr {
   }
 }
 
+@media only screen and (min-width: 600px) {
+  .heading-grid {
+    display: block; 
+  }
+}
+
 .heading-grid {
   margin-top: 4rem;
 
