--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -5,8 +5,9 @@
         </div>
         <div class="details">
             <h2>Hi! I'm Amy / Atius</h2>
-            <p>I'm a trans girl :3 (technically also a Minecraft YouTuber)</p>
+            <p>I'm a trans girl :3 (technically also a Minecraft YouTuber) I'm Thai and I live in Thailand. Not very good at most things I do, but I do it anyways. I can speak Thai and English (though very broken grammar) Nothing much else to say!</p>
             <p>You've found my website!</p>
+			<p>You can contact me at: Signal (Ask my number), <a href="https://matrix.to/#/@atius:beeper.com">Matrix</a>, <a href="https://t.me/amyiscoolz">Telegram</a>, <a href="https://www.instagram.com/amyiscoolz/">Instagram</a>, Email (atiusamy@murena.io), iMessage (amy.amyiscoolz@gmail.com), Discord (@atiusamy).<p>
         </div>
     </div>
 </div>  
