--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,17 +1,19 @@
 body > header {
   background: transparent;
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
-  position: fixed;
-  top: 3px;
-  left: 3px;
-  right: 3px;
-  border-radius: 8px;
-  overflow: hidden;
-  border: 1px solid black;
+  border: none;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.02), inset 0 1px 0 0 rgba(255, 255, 255, 0.1), inset 0 -1px 0 0 rgba(255, 255, 255, 0.05), 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2);
   z-index: 9999;
   color: var(--header-fg-color);
   fill: var(--header-fg-color);
+
+  position: fixed;
+  top: 3px;
+  left: 3px;
+  right: 3px;
+
+  overflow: hidden;
 
   nav {
     display: flex;
@@ -19,6 +21,7 @@ body > header {
     justify-content: space-between;
     overflow-x: auto;
     padding: 0 1rem;
+    border-radius: 8px;
 
     ul {
       display: inline-block;
