--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,7 +10,7 @@ body > section {
 }
 
 body > section:first-of-type {
-    padding: 0;
+    padding-top: 4rem;
   }
 
 body > footer {
@@ -141,8 +141,6 @@ hr {
 }
 
 .heading-grid {
-  margin-top: 4rem;
-  
   div {
     text-align: center;
     align-items: center;
