--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,14 @@
     </ul>
 
     <ul>
+      <div id="search-container" class="hidden">
+        {% include svg/edit-find-symbolic.svg %}
+        <input type="text" id="search-input" placeholder="Search Posts…">
+        <ul id="results-container"></ul>
+      </div>
+    </ul>
+
+    <ul>
       <li><a href="{{ site.baseurl }}/feed.xml" title="RSS Feed">
         {% include svg/rss-square.svg %}
       </a></li>
@@ -25,5 +33,25 @@
         {% include svg/modrinth.svg %}
       </a></li>
     </ul>
+
+    <script src="/scripts/search.js"></script>
+
+    <script>
+      document.getElementById('search-container').classList.remove("hidden")
+
+      SimpleJekyllSearch({
+        searchInput: document.getElementById('search-input'),
+        searchResultTemplate: `<li>
+          <a href="{url}">
+            <div class="featured-image" alt="Featured image" style="background-image: url({image});"></div>
+            <span id="title">{title}</span>
+            <span id="description">{description}</span>
+          </a>
+        </li>`,
+        resultsContainer: document.getElementById('results-container'),
+        noResultsText: ("No Result Found"),
+        json: '/search.json'
+      })
+    </script>
   </nav>
 </header>
