fixed more imports

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -50,7 +50,7 @@
         </li>`,
         resultsContainer: document.getElementById('results-container'),
         noResultsText: ("No Result Found"),
-        json: '/search.json'
+        json: '{{ site.baseurl }}/search.json'
       })
     </script>
   </nav>
