--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
 
   <link rel="icon" sizes="256x256" href="https://www.gravatar.com/avatar/{{ site.gravatar }}?s=256&d=blank" />
   <meta itemprop="logo" content="https://www.gravatar.com/avatar/{{ site.gravatar }}?s=256&d=blank" />
-  <link rel="shortcut icon" href="/images/favicon.ico">
-  <link rel="apple-touch-icon" href="/images/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.ico">
+  <link rel="apple-touch-icon" href="{{ site.baseurl }}/images/favicon.ico">
 
   <link rel="alternate" type="application/rss+xml" title="elementary Blog" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
