--- a/css/main.scss
+++ b/css/main.scss
@@ -140,10 +140,10 @@ pre {
 }
 
 details {
-  border: 1px solid #aaa;
   border-radius: 4px;
-  padding: 0.5em 0.5em 0;
+  padding: 0.5 0.5em 0.1px;
 
+  background-color: dimgrey;
   color: white;
 }
 
@@ -162,6 +162,5 @@ details[open] {
 }
 
 details[open] summary {
-  border-bottom: 1px solid #aaa;
   margin-bottom: 0.5em;
 }
