--- a/css/main.scss
+++ b/css/main.scss
@@ -141,7 +141,10 @@ pre {
 
 details {
   border-radius: 4px;
-  padding: 0.5 0.5em 0.1px;
+  padding-top: 0.5em;
+  padding-bottom: 1px;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 
   background-color: dimgrey;
   color: white;
