fixed blog text - faq css test

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
         {% include svg/atius.svg %}
       </a></li>
 
-      <li><a href="https://www.youtube.com/@Atius/videos" target="_self"><b>AtiusAmy</b></a></li>
+      <li><a href="https://www.youtube.com/@Atius/videos" target="_self"><b>Atius</b></a></li>
     </ul>
 
     <!-- <ul class="secondary">
