faq template + added margin

--- a/css/main.scss
+++ b/css/main.scss
@@ -146,6 +146,8 @@ details {
   padding-left: 0.5em;
   padding-right: 0.5em;
 
+  margin: 20px;
+
   background-color: dimgrey;
   color: white;
 }
