faq button thing

--- a/css/main.scss
+++ b/css/main.scss
@@ -171,7 +171,7 @@ details[open] summary {
   margin-bottom: 0.5em;
 }
 
-button .faqButton {
+.faqButton {
   display: inline-block;
   padding: 30px 100px; 
   text-align: center;
