--- a/_includes/medium.html
+++ b/_includes/medium.html
@@ -1,7 +1,7 @@
 <div class="medium">
   <hr />
   <article>
-    <h2>Looking for More?</h2>
-    <p>Please wait! This is kind of a personal blog with occasional informative stuff in it :P
+    <h2>You've reached the end :3</h2>
+    <p>Amy wishes you the best in your journey accross the web !!
     </article>
 </div>
