--- a/css/main.scss
+++ b/css/main.scss
@@ -172,6 +172,7 @@ details[open] summary {
 }
 
 .faqButton {
+  margin: 10px;
   display: inline-block;
   padding: 30px 100px; 
   text-align: center;
@@ -185,6 +186,7 @@ details[open] summary {
 }
 
 .linksButton {
+  margin: 10px;
   display: inline-block;
   padding: 30px 100px; 
   text-align: center;
