--- a/css/main.scss
+++ b/css/main.scss
@@ -198,3 +198,10 @@ details[open] summary {
   border-radius: 20px;
   transition: background-color 0.3s;
 }
+
+.gridSection {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: minmax(100px, auto);
+  gap: 10px; 
+}
