--- a/css/main.scss
+++ b/css/main.scss
@@ -228,6 +228,7 @@ details[open] summary {
   width: 64px; 
   height: 64px; 
   border: 1px solid #d2d2d2;
+  background-color: white;
   border-radius: 15px;
 }
 
