--- a/_sass/_featured.scss
+++ b/_sass/_featured.scss
@@ -6,10 +6,12 @@
   opacity: 1;
   padding: 1rem;
   text-decoration: none;
-  transition: background-color 250ms ease, color 250ms ease;
+  transition: background-color 250ms ease, color 250ms ease, transform 0.4s;
+  -webkit-transition: transform 0.4s;
 
   &:hover {
     background: var(--secondary-bg-color);
+    transform: scale(1.05)
   }
 
   header {
