--- a/_sass/_featured.scss
+++ b/_sass/_featured.scss
@@ -11,7 +11,7 @@
 
   &:hover {
     background: var(--secondary-bg-color);
-    transform: scale(1.05)
+    transform: scale(1.05);
   }
 
   header {
