update tags transition

--- a/_sass/_tags.scss
+++ b/_sass/_tags.scss
@@ -15,6 +15,7 @@ aside.tags {
   padding: 0 0.5em;
   text-decoration: none;
   transition: transform 0.6s;
+  -webkit-transition: transform 0.6s;
 }
 
 .tag:hover {
