--- a/_includes/medium.html
+++ b/_includes/medium.html
@@ -2,6 +2,6 @@
   <hr />
   <article>
     <h2>You've reached the end :3</h2>
-    <p>Amy wishes you the best in your journey accross the web !!
+    <p>Amy wishes you the best in your journey across the web !!
     </article>
 </div>
